<resources>

    <string name="app_name">Be Back</string>

<!--    LOGIN-->
    <string name="login_description">Who the hell got my stuff ?\nWhose the hell is this thing ?</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_mail">Sign in with your mail</string>

<!--    ERROR-->
    <string name="error_authentication_canceled">Not us ! \n You cancelled the process</string>
    <string name="error_no_internet">Looks like you are only\n connected to the real world</string>
    <string name="error_unknown">Oops, looks like an unknown error.\nTry again.</string>
    <string name="error_undefined">Damned !\nWe hit an undefined error !</string>

    <string name="google" translatable="false">google</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="profile">Profile</string>
    <string name="archive">Archive</string>
    <string name="gradient_angle" translatable="false">270</string>
    <string name="loan_choice">Loan choice</string>
    <string name="i_lend">I lend…</string>
    <string name="i_borrow">I borrow…</string>
    <string name="lend_title">Generous loaner</string>
    <string name="borrow_title">Humble borrower</string>
    <string name="cancel">Forget it</string>
    <string name="product_hint">…you know, this thing…</string>
    <string name="recipient_hint">…you know, this mate…</string>
    <string name="delivery_hint">…you know, this company…</string>
    <string name="who">WHO *</string>
    <string name="whom">WHOM *</string>
    <string name="what">WHAT *</string>
    <string name="type">TYPE</string>
    <string name="when">WHEN</string>
    <string name="due">DUE</string>
    <string name="due_date_hint">Due date</string>
    <string name="due_date">%1$s/%2$s/%3$d </string>
    <string name="notif">Notif</string>
    <string name="notif_date_hint">Notif date</string>
    <string name="pick">PICK</string>
    <string name="mandatory_information">* = required, wouldn\'t make sense\nwithout it, isn\'t it ?</string>
    <string name="invalid_form">Damned it !\nI forgot the required fields !</string>
    <string name="lent_to">Lent to</string>
    <string name="borrowed_from">Borrowed from</string>
    <string name="delivery_title">Quietly waiting for delivery</string>
    <string name="i_wait">Waiting for…</string>
    <string name="transported_by">Transported by</string>
    <string name="standard">Standard</string>
    <string name="mode">Mode</string>
    <string name="delete">Delete</string>
    <string name="returned">Returned !</string>
    <string name="undo">Undo</string>
    <string name="deleted_message">%1$s ?\nForget about it !</string>
    <string name="undeleted_message">Ooops, my mistake !\n%1$s rescued !</string>
    <string name="archived_message">%1$s returned yeaahhh !</string>
    <string name="unarchived_message">My bad !\n%1$s not returned !</string>
    <string name="received_message">%1$s received yeaahhh !</string>
    <string name="not_received_message">My bad !\n%1$s not received !</string>
    <string name="received">Received !</string>
    <string name="loanId" translatable="false">loanId</string>
    <string name="on" translatable="false">On</string>
    <string name="i_borrowed">I borrowed</string>
    <string name="i_lended">I lent</string>
    <string name="since">Since</string>
    <string name="back">Back</string>
    <string name="angry">Damned it \nLate again !</string>
    <string name="fine">It could have been\nworse, dude !</string>
    <string name="happy">Went like a charm !</string>
    <string name="whom_no_star">Whom</string>
    <string name="who_no_star">Who</string>
    <string name="what_no_star">What</string>
    <string name="invalid_edit_form">Hummm well…\nNothing changed</string>
    <string name="saved">That\'s in the box, boss !</string>
    <string name="category_icon">Category Icon</string>
    <string name="my_profile">My profile</string>
    <string name="my_firstname">…what the hell my firstname is…</string>
    <string name="firstname">First *</string>
    <string name="my_lastname">…what the hell my lasstname is…</string>
    <string name="lastname">Last *</string>
    <string name="my_pseudo">…but let\'s call me…</string>
    <string name="pseudo">Alias</string>
    <string name="mail">Mail</string>
    <string name="logout">Logout</string>
    <string name="invalid_edit_profile_form">Well… nothing changed\nor a mandatory field\n is desperately empty</string>
    <string name="sign_out_message">Bye bye %1$s</string>
    <string name="transaction_failure">Transaction failure</string>
    <string name="unknown_error">Damned, we hit an unknown error !</string>
    <string name="error_getting_docs">Couldn\'t get these damned docs !</string>
    <string name="d_day">D-day</string>
    <string name="d_minus_three">D-3</string>
    <string name="d_minus_one_week">D-7</string>
    <string name="notif_message">This is a reminder about %1$s.\nTap here to open the detail of your loan</string>
    <string name="about">About</string>
    <string name="notif_lending">Hey, you lent me, remember ?!</string>
    <string name="notif_borrowing">Hey, you borrowed me, remember ?!</string>
    <string name="notif_delivery">Hey, I should have been delivered by now ?!</string>
    <string name="notif_message_lending">Me, %1$s, have been held hostage\nby %2$s for too much time now !</string>
    <string name="notif_message_borrowing">I\'m just a %1$s !\nBut if you don\'t give me back to my master,\n%2$s will find you back and… !</string>
    <string name="notif_message_delivery">Me, %1$s, should have been arrived in my new home.\nMight be time to drop a message to %2$s, isn\'t it ?</string>
    <string name="filter">Filters</string>
    <string name="borrowing">BORROWING</string>
    <string name="lending">LENDING</string>
    <string name="whom_filter">Whom</string>
    <string name="what_filter">What</string>
    <string name="delivery">DELIVERY</string>
    <string name="app_version">v1.0</string>
    <string name="app_version_date">March, the 31st, 2020</string>
    <string name="credits">Credits</string>
    <string name="credits_author">Author : Bertrand Ripoche\nMail : pafacil@gmail.com\n(Please specify "BeBack app feedback" as subject)</string>
    <string name="credits_illustration">Icons obtained from\nhttps://www.flaticon.com/authors/freepik\nhttps://www.flaticon.com/authors/vectors-market\nThanks !</string>
    <string name="thanks">Thanks for using the app !</string>
    <string name="error_adding_loan">Oops, something went wrong</string>
    <string name="error_undeleting_loan">Ouch, something went terribly wrong !</string>
    <string name="invalid_filter">Hummm, what do you want me to filter…\nif there is no filter</string>
    <string name="delivery_for">Delivery…</string>
    <string name="unarchive">Unarchive</string>

    <!--    PRODUCT CATEGORY-->
    <string-array name="product_category">
        <item>miscelleanous</item>
        <item>appliance</item>
        <item>book</item>
        <item>clothes</item>
        <item>electronic</item>
        <item>food</item>
        <item>furniture</item>
        <item>game</item>
        <item>instrument</item>
        <item>jewelry</item>
        <item>kitchen</item>
        <item>money</item>
        <item>music</item>
        <item>sport</item>
        <item>ticket</item>
        <item>tool</item>
        <item>vehicle</item>
    </string-array>

    <string name="miscelleanous">Miscelleanous</string>
    <string name="appliance">Appliance</string>
    <string name="book">Book</string>
    <string name="clothes">Clothes</string>
    <string name="electronic">Electronic</string>
    <string name="food">Food</string>
    <string name="furniture">Furniture</string>
    <string name="game">Game</string>
    <string name="instrument">Instrument</string>
    <string name="jewelry">Jewelry</string>
    <string name="kitchen">Kitchen</string>
    <string name="money">Money</string>
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="ticket">Ticket</string>
    <string name="tool">Tools</string>
    <string name="vehicle">Vehicle</string>

    <array name="product_category_icon">
        <item>@drawable/ic_miscellaneous</item>
        <item>@drawable/ic_appliance</item>
        <item>@drawable/ic_books</item>
        <item>@drawable/ic_clothes</item>
        <item>@drawable/ic_electronic</item>
        <item>@drawable/ic_food</item>
        <item>@drawable/ic_furniture</item>
        <item>@drawable/ic_games</item>
        <item>@drawable/ic_instrument</item>
        <item>@drawable/ic_jewelry</item>
        <item>@drawable/ic_kitchen</item>
        <item>@drawable/ic_money</item>
        <item>@drawable/ic_music</item>
        <item>@drawable/ic_sport</item>
        <item>@drawable/ic_ticket</item>
        <item>@drawable/ic_tools</item>
        <item>@drawable/ic_vehicle</item>
    </array>

</resources>
