<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_about"
        android:background="@color/primaryColor"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/title_size"
            android:textColor="@color/black"
            android:text="@string/app_name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/title_size"
            android:text="@string/app_version"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            android:text="@string/app_version_date"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra"
            android:background="@color/secondaryColor"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/title_size"
                android:background="@color/primaryDarkColor"
                android:textColor="@color/secondaryColor"
                android:text="@string/credits"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/extra"
                android:minLines="3"
                android:text="@string/credits_author"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/extra"
                android:text="@string/credits_illustration"/>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
            android:gravity="center"
            android:background="@drawable/bubble_1"
        />

</LinearLayout>